@@ -27,7 +27,7 @@ screamshotter = git https://github.com/makinacorpus/django-screamshot.git branch
 convertit = git https://github.com/makinacorpus/convertit.git rev=0b537dee184da67e7cd5d07d48f8b65968684ad2
 paperclip = git https://github.com/makinacorpus/django-paperclip.git rev=d85988dcd6267ef1800841e8ee255174a17e3b88
 # Still under development
-mapentity = git https://github.com/makinacorpus/Geotrek.git rev=05c47b434b913ec1fd71562c8f26797dc084dd8d
+mapentity = git https://github.com/makinacorpus/Geotrek.git rev=19e4fae4443ba042fa7e27adf43f3d154e9328cf
 
 [gdal-bindings]
 recipe = zc.recipe.egg:custom
