@@ -15,6 +15,8 @@ CHANGELOG
 * Fix black background on map captures (fixes #979)
 * Increased scale text size on map captures (fixes #850)
 * Show map attributions on map captures (fixes #852)
+* Fix aspect ratios of map in trek public documents (fixes #849)
+
 
 0.22.4 (2014-03-06)
 -------------------
